--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="main-container">
   <!-- Particles background -->
-  <app-particles-background 
-    [quantity]="400" 
-    [ease]="80" 
-    [color]="'#9E1DCD'" 
+  <app-particles-background
+    [quantity]="400"
+    [ease]="80"
+    [color]="'#9E1DCD'"
     class="particles-backdrop">
   </app-particles-background>
 
@@ -22,9 +22,9 @@
         <div class="home-description">
           <h1>Hi, I'm Ashish Bhatt</h1>
           <p>
-            I'm a web developer passionate about building scalable, high-performance web 
-            applications. I specialize in Python and Django for the backend and Angular for 
-            dynamic, responsive interfaces. Continuously learning, I strive to create seamless 
+            I'm a web developer passionate about building scalable, high-performance web
+            applications. I specialize in Python and Django for the backend and Angular for
+            dynamic, responsive interfaces. Continuously learning, I strive to create seamless
             and intuitive user experiences.
           </p>
           <div class="home-buttons">
@@ -46,7 +46,7 @@
         <a href="https://angular.dev/overview" target="_blank"><img src="./assets/icons/angular.png" alt="Angular"></a>
         <a href="https://www.typescriptlang.org" target="_blank"><img src="./assets/icons/ts.png" alt="TypeScript"></a>
         <a href="https://docs.docker.com/get-started/docker-overview/" target="_blank"><img
-            src="./assets/icons/docker2.png" alt="Docker"></a>
+        src="./assets/icons/docker2.png" alt="Docker"></a>
         <a href="https://www.figma.com/" target="_blank"><img src="./assets/icons/figma.png" alt="Figma"></a>
         <a href="https://git-scm.com/doc" target="_blank"><img src="./assets/icons/git.png" alt="Git"></a>
       </div>
@@ -56,38 +56,40 @@
     <section id="projects" class="projects-section">
       <h2>Projects</h2>
       <div class="projects-grid">
-        <div class="project-card" *ngFor="let project of projects">
-          <!-- Image/Video Container -->
-          <div class="project-image">
-            <ng-container *ngIf="project.media.type === 'video'; else imageTemplate">
-              <!-- Video with fallback on error -->
-              <video 
-                [src]="project.media.src" 
-                controls 
-                [muted]="true" 
-                defaultMuted 
-                poster="./assets/play_vid.png"
-                (error)="handleMediaError($event)">
-                <!-- Fallback poster for video if it doesn't load -->
-                <img [src]="'assets/fallback-image.png'" alt="Video failed" class="fallback-image" />
-              </video>
-            </ng-container>
-            <ng-template #imageTemplate>
-              <img [src]="project.media.src" [alt]="project.title" (error)="handleMediaError($event)">
-            </ng-template>
+        @for (project of projects; track project) {
+          <div class="project-card">
+            <!-- Image/Video Container -->
+            <div class="project-image">
+              @if (project.media.type === 'video') {
+                <!-- Video with fallback on error -->
+                <video
+                  [src]="project.media.src"
+                  controls
+                  [muted]="true"
+                  defaultMuted
+                  poster="./assets/play_vid.png"
+                  (error)="handleMediaError($event)">
+                  <!-- Fallback poster for video if it doesn't load -->
+                  <img [src]="'assets/fallback-image.png'" alt="Video failed" class="fallback-image" />
+                </video>
+              } @else {
+                <img [src]="project.media.src" [alt]="project.title" (error)="handleMediaError($event)">
+              }
+            </div>
+            <!-- Title -->
+            <h3>{{ project.title }}</h3>
+            <!-- Description -->
+            <p class="project-description">{{ project.description }}</p>
+            <!-- View Project Button -->
+            @if (project.link) {
+              <a class="project-btn" [href]="project.link" target="_blank">
+                View Project
+              </a>
+            } @else {
+              <a class="project-btn disabled" [attr.disabled]="true">View Unavailable</a>
+            }
           </div>
-          <!-- Title -->
-          <h3>{{ project.title }}</h3>
-          <!-- Description -->
-          <p class="project-description">{{ project.description }}</p>
-          <!-- View Project Button -->
-          <a class="project-btn" *ngIf="project.link; else unavailableLink" [href]="project.link" target="_blank">
-            View Project
-          </a>
-          <ng-template #unavailableLink>
-            <a class="project-btn disabled" [attr.disabled]="true">View Unavailable</a>
-          </ng-template>
-        </div>
+        }
       </div>
     </section>
 
