--- a/src/app/particles-background/particles-background.component.css
+++ b/src/app/particles-background/particles-background.component.css
@@ -1,8 +1,9 @@
-html, body {
+html,
+body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* Ensuring no scrollbars appear */
+  overflow: hidden;
 }
 
 .particles-container {
